# spinnaker_example

./: Acquisition.cpp  AcquisitionMultipleCamera.cpp  CMakeLists.txt  Enumeration.cpp  ExceptionHandling.cpp  Exposure.cpp  ImageFormatControl.cpp  NodeMapInfo.cpp  SaveToAvi.cpp  Trigger.cpp
